--- a/style.css
+++ b/style.css
@@ -7,7 +7,6 @@
 .app{
     height: 100vh;
     width: 100%;
-    border: 3px red solid;
 }
 
 header{
@@ -41,13 +40,57 @@ header img {
 }
 
 header .search input{
-    margin: 5px;
-    text-align: center;
-    padding: 10px;
+    border-radius: 12px 0 0 12px;
+    border: 0;
+    outline: none;
+    height: 36px;
+    padding: 8px 8px;
+    background-color: rgba(255, 255, 255, 0.624);
+    color: #000000;
+    border: 2px black solid;
+    font-size: 20px;
 }
 
 header .search button{
-    margin: 10px;
+    margin: 5px;
+    padding: 8px, 8px;
+    vertical-align: middle;
     text-align: center;
+    background-color: red;
+    height: 36px;
 }
 
+.cards{
+    border: 3px rgb(0, 255, 255) solid;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+}
+
+.card {
+    height: 600px;
+    width: 500px;
+    border: 3px black solid;
+    margin: 30px;
+    text-align: center;
+    align-items: center;
+    padding: 5px;
+}
+
+.name{
+    font-size: 30px;
+    margin: 15px;
+    font-weight: 900;
+}
+
+.id{
+    font-size: 20px;
+    margin: 5px;
+}
+
+.pokemoninfo{
+    font-size: 15px;
+    margin: 15px;
+}
