--- a/style.css
+++ b/style.css
@@ -10,6 +10,7 @@
 }
 
 header{
+    overflow: hidden;
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -61,6 +62,7 @@ header .search button{
 }
 
 .cards{
+    overflow: hidden;
     border: 3px rgb(0, 255, 255) solid;
     width: 100%;
     height: 100%;
@@ -70,6 +72,7 @@ header .search button{
 }
 
 .card {
+    overflow: hidden;
     height: 600px;
     width: 500px;
     border: 3px black solid;
