try to async way for db pokè

--- a/style.css
+++ b/style.css
@@ -47,6 +47,10 @@ header .types {
   list-style-type: none;
 }
 
+/* header .types:hover li {
+  animation: zoom-in-zoom-out 1s ease-out;
+} */
+
 header .search input {
   border: 0;
   outline: none;
@@ -54,7 +58,7 @@ header .search input {
   padding: 8px 8px;
   background-color: rgba(255, 255, 255, 0.624);
   color: #000000;
-  border: 2px black solid;
+  border: 2px rgb(178, 3, 3) solid;
   font-size: 20px;
 }
 
@@ -70,27 +74,30 @@ header .search button {
 
 .cards {
   overflow: hidden;
-  border: 3px rgb(0, 255, 255) solid;
   width: 100%;
   height: 100%;
   display: flex;
-  justify-content: space-between;
+  padding: 10px;
   flex-wrap: wrap;
+  overflow-y: auto;
 }
 
 .card {
   overflow: hidden;
-  height: 600px;
-  width: 500px;
+  height: 550px;
+  width: 400px;
   border: 3px black solid;
-  margin: 30px;
   text-align: center;
   align-items: center;
   padding: 5px;
 }
 
+.card img {
+  width: 100%;
+}
+
 .card img:hover {
-  animation: zoom-in-zoom-out 3s ease;
+  animation: zoom-in-zoom-out 1s ease-out;
 }
 
 @keyframes zoom-in-zoom-out {
@@ -98,7 +105,7 @@ header .search button {
     transform: scale(1, 1);
   }
   50% {
-    transform: scale(1.3, 1.3);
+    transform: scale(1.1, 1.1);
   }
   100% {
     transform: scale(1, 1);
