--- a/style.css
+++ b/style.css
@@ -110,18 +110,20 @@ header .search button {
 }
 
 .name-poke {
-  font-size: 30px;
+  font-size: 40px;
   margin: 15px;
   font-weight: 900;
 }
 
 .id-poke {
-  font-size: 20px;
+  font-size: 40px;
   margin: 10px;
+  padding: 5px;
 }
 
 .type-poke {
   font-size: 20px;
   margin: 5px;
-  color: red;
+  color: rgba(0, 0, 0, 0.58);
+  font-weight: bold;
 }
