--- a/style.css
+++ b/style.css
@@ -66,22 +66,22 @@ header .search input {
   border: 0;
   outline: none;
   height: 36px;
-  padding: 8px 8px;
+  padding: 4px 4px;
   background-color: rgba(255, 255, 255, 0.624);
   color: #000000;
   border: 2px rgb(178, 3, 3) solid;
-  font-size: 20px;
+  font-size: 10px;
+  width: 55%;
 }
 
 header .search button {
-  margin: 5px;
   padding: 8px, 8px;
   vertical-align: middle;
   text-align: center;
   background-color: red;
-  height: 96px;
+  height: 20%;
   border-radius: 12px 0 0 12px;
-  font-size: 40px;
+  font-size: 24px;
 }
 
 .cards {
@@ -89,20 +89,20 @@ header .search button {
   width: 100%;
   height: 100%;
   display: flex;
-  padding: 10px;
+  padding: 5px;
   flex-wrap: wrap;
   overflow-y: auto;
 }
 
 .card {
   overflow: hidden;
-  height: 650px;
-  width: 460px;
+  height: 600px;
+  width: 340px;
   border: 8px black solid;
   text-align: center;
   align-items: center;
   padding: 10px;
-  margin: 55px;
+  margin: 45px;
 }
 
 .card img {
@@ -126,7 +126,7 @@ header .search button {
 }
 
 .name-poke {
-  font-size: 40px;
+  font-size: 30px;
   margin: 15px;
   font-weight: 900;
 }
