--- a/style.css
+++ b/style.css
@@ -2,6 +2,9 @@
 
 * {
   font-family: "Press Start 2P", cursive;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
 body {
@@ -53,6 +56,7 @@ header {
   justify-content: space-between;
   border: var(--border-color) 3px solid;
   background-color: var(--main-color);
+  box-shadow: 0 4px 8px 0 rgb(0, 0, 0, 0.8);
 }
 
 header .logo {
@@ -69,24 +73,36 @@ header .logo {
 header .credits {
   font-size: 15px;
   font-weight: bold;
+  text-align: center;
   max-width: 10%;
   margin-left: 10px;
+  margin-right: 30px;
   padding-top: 10px;
   padding-bottom: 10px;
 }
 
+header .credits img {
+  max-width: 40px;
+}
+
 header .credits a {
   font-size: 20px;
+  background-image: var(--logo-dark-light);
+  background-size: 100%;
+  -webkit-background-clip: text;
+  -moz-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  -moz-text-fill-color: transparent;
   text-decoration: none;
-  color: var(--text-color);
+  text-align: center;
 }
 
 .underline-name {
   text-decoration: underline !important;
+  text-align: center;
 }
 
 header img {
-  max-width: 35px;
   text-decoration: none;
   vertical-align: middle;
 }
@@ -102,41 +118,50 @@ header .types {
 header .types a {
   text-decoration: none;
   list-style-type: none;
-  background-color: rgba(0, 0, 0, 0.076);
+  background-color: rgba(0, 0, 0, 0.184);
+  border-radius: 50%;
 }
 
 header .types img {
-  width: 25px;
-  padding: 8px;
-  margin: 2px;
+  width: 80%;
+  margin: 3px;
+  padding: 5px;
 }
 
 header .search input {
   border: 0;
   outline: none;
-  height: 46px;
+  height: 50px;
   padding: 8px 8px;
   background-color: rgba(255, 255, 255, 0.624);
   color: var(--text-color);
   border: 2px rgb(178, 3, 3) solid;
   font-size: 10px;
-  max-width: 72%;
+  max-width: 68%;
+  margin-left: 12px;
+}
+header .search input:hover {
+  border: 3px rgba(202, 22, 22, 0.557) solid;
+  box-shadow: 0 4px 8px 0 rgb(0, 0, 0, 0.3);
 }
 
 header .search button {
   vertical-align: middle;
   text-align: center;
   background-color: red;
-  border-radius: 12px 0 0 12px;
-  font-size: 25px;
+  border-radius: 0 12px 12px 0px;
+  font-size: 24px;
+  padding: 8px;
 }
 
 .dark-mode-button button {
-  padding: 5px;
-  width: 40px;
+  padding: 10px;
+  width: 50px;
   font-size: 24px;
   background-color: var(--darkmode-lightmode);
-  border-radius: 12px 0 0 12px;
+  border-radius: 12px 12px 12px 12px;
+  text-align: center;
+  margin-left: 20px;
 }
 
 .cards {
@@ -160,6 +185,7 @@ header .search button {
   align-items: center;
   padding: 10px;
   margin: 45px;
+  box-shadow: 0 4px 8px 0 rgb(0, 0, 0, 0.8);
 }
 
 .card img {
@@ -217,176 +243,200 @@ header .search button {
   display: none;
 }
 
-#fire{
+#fire {
   background-color: red;
   border-radius: 50%;
 }
 
-#water{
+#water {
   background-color: blue;
   border-radius: 50%;
 }
 
-#normal{
+#normal {
   background-color: rgba(36, 32, 32, 0.357);
   border-radius: 50%;
 }
 
-#grass{
+#grass {
   background-color: green;
   border-radius: 50%;
 }
 
-#flying{
+#flying {
   background-color: rgb(53, 210, 213);
   border-radius: 50%;
 }
 
-#fighting{
+#fighting {
   background-color: rgb(237, 128, 26);
   border-radius: 50%;
 }
 
-#poison{
+#poison {
   background-color: rgb(250, 50, 233);
   border-radius: 50%;
 }
 
-#electric{
+#electric {
   background-color: rgb(217, 214, 30);
   border-radius: 50%;
 }
 
-#ground{
+#ground {
   background-color: rgb(170, 103, 26);
   border-radius: 50%;
 }
 
-#rock{
+#rock {
   background-color: grey;
   border-radius: 50%;
 }
 
-#psychic{
+#psychic {
   background-color: rgb(142, 29, 222);
   border-radius: 50%;
 }
 
-#ice{
+#ice {
   background-color: rgb(35, 251, 208);
   border-radius: 50%;
 }
 
-#bug{
+#bug {
   background-color: rgb(141, 190, 69);
   border-radius: 50%;
 }
 
-#ghost{
+#ghost {
   background-color: rgb(0, 0, 0);
   border-radius: 50%;
 }
 
-#steel{
+#steel {
   background-color: rgb(158, 158, 158);
   border-radius: 50%;
 }
 
-#dragon{
+#dragon {
   background-color: rgb(181, 133, 29);
   border-radius: 50%;
 }
 
-#dark{
+#dark {
   background-color: rgb(0, 0, 0);
   border-radius: 50%;
 }
 
-#fairy{
+#fairy {
   background-color: rgb(218, 20, 109);
   border-radius: 50%;
 }
-
-
 
 /* TESTED ON iPAD AIR 5  */
 @media (max-width: 1400px) {
   header .types {
     font-size: 10px;
-    display: none;
+    display: flex;
+    flex-wrap: wrap;
+    margin: 10px;
+    text-align: center;
+    align-items: center;
+  }
+
+  header .types img {
+    width: 35px;
   }
 
   header .credits {
     width: 20%;
     padding: 10px;
   }
-  header .credits a {
 
+  header .credits a {
     font-size: 15px;
   }
 
   header .input button {
     width: 10%;
   }
-
-  .types-dropdown {
-    display: block;
-    text-align: center;
-  }
 }
 
 /* TESTED ON iPHONE 11 */
 @media (max-width: 1058px) {
+  .app {
+    margin-top: 15px;
+  }
+
   header {
     flex-direction: column;
     text-align: center;
-    align-items: center;
-    padding: 10px;
   }
 
-header .credits {
-  font-size: 15px;
-  text-align: center;
-  margin-right: 5px;
+  header .logo {
+    margin: 0px;
+  }
 
-}
-header .credits a{
-  font-size: 10px;
-  text-align: center;
-  margin-right: 5px;
+  header .credits {
+    font-size: 15px;
+    font-weight: bold;
+    text-align: center;
+    max-width: 20%;
+    margin-left: 0px;
+    margin-right: 0px;
+    padding-top: 0px;
+    padding-bottom: 10px;
+  }
+  
+  header .credits img {
+    max-width: 60px;
+  }
+  
+  header .credits a {
+  font-size: 8px;
+  }
 
-}
+  header .types {
+    text-align: center;
+    margin-left: 30px;
+    margin-right: 20px;
 
-  header input {
-    width: 80%;
+    /* width: --px; */
+  }
+
+  header .types a {
+    text-decoration: none;
+    text-align: center;
+  }
+
+  header .types img {
+    text-align: center;
+    width: 50px;
+    padding: 6px;
   }
 
   header .search button {
     width: 30%;
     text-align: center;
     font-size: 26px;
-    margin: 10px;
     border-radius: 12px 12px 12px 12px;
-    padding: 2px;
+    margin: 20px;
+    padding: 10px;
   }
 
-  .types-dropdown {
-    display: block;
-    margin: 30px;
-  }
-
-  .types-dropdown option {
+  header .search input {
+    width: 500px;
     text-align: center;
-    padding: 20px;
+    margin: 10px;
   }
 
   .dark-mode-button button {
-    padding: 5px;
-    width: 40px;
+    padding: 10px;
+    width: 100px;
     font-size: 24px;
-    background-color: var(da);
     border-radius: 12px 12px 12px 12px;
-    margin: 10px;
+    margin-bottom: 15px;
+    margin-left: 0px;
   }
 
   .name-poke {
